--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript" src="function.js"></script>
+    <script type="text/javascript" src="Object.js"></script>
 </head>
 <body>
     
