utilizzati map e forEach

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script type="text/javascript" src="function.js"></script>
     <script type="text/javascript" src="Object.js"></script>
+    <script type="text/javascript" src="forEach-map.js"></script>
 </head>
 <body>
     
